Fixed section vertical spacing on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,10 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.sections > div {
+  margin-top: 40px;
+}
+
 .sections img {
   width: 100%;
   height: 100%;
